tests/NormalTests/paczka1/fuzzy1/27298836.err
Error in line 8: xaTdEIwYux S544 95,6
Error in line 10: 0qPLUuWWjJK S922 50,6
Error in line 6: sDl S161 52,2
Error in line 30: S161 S922 68,8
Error in line 13: DIfws7jx60H S544 30,7
Error in line 36: DIfws7jx60H S922 96,9
Error in line 34: 0qPLUuWWjJK S161 30,5
